Fix missing padding-top on LoginPage widescreens

--- a/src/login/main.css
+++ b/src/login/main.css
@@ -18,7 +18,7 @@ a {
 }
 
 #kc-header-wrapper {
-    padding: 0;
+    padding-right: 0;
 }
 
 #kc-page-title {
